<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/elevation_0dp"
    app:cardCornerRadius="@dimen/corner"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/layout_mini_post_recipe_img_avatar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:scaleType="centerInside"
                android:background="@drawable/circle"
                android:src="@drawable/ic_notifications_none_black_24dp" />
            <TextView
                android:id="@+id/layout_mini_post_recipe_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/layout_mini_post_recipe_img_avatar"
                android:fontFamily="sans-serif-black"
                android:letterSpacing="0.1"
                android:text="@string/reminder"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/item_thumail_tv_sub_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_mini_post_recipe_tv_name"
                android:layout_toEndOf="@id/layout_mini_post_recipe_img_avatar"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.1"
                android:text="@string/important"
                android:textSize="10sp" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/rich_text"
            android:fontFamily="sans-serif"
            android:layout_marginVertical="@dimen/margin"
            />
        <include layout="@layout/layout_location_time"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_note_btn_snooze"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/corner"
            android:text="@string/snooze"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/corner"
            android:text="@string/completed"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_8dp"/>
    </LinearLayout>

    </LinearLayout>
    <!--<FrameLayout-->
        <!--android:visibility="visible"-->
        <!--android:id="@+id/bg"-->
        <!--android:background="#F44336"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<com.google.android.material.button.MaterialButton-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="remove"-->
            <!--app:icon="@drawable/ic_close_black_24dp"/>-->
    <!--</FrameLayout>-->

</com.google.android.material.card.MaterialCardView>